# todo_api

./: .env  .gitignore  Cargo.toml  docker-compose.yml
api/: Dockerfile
api/src/: db.rs  lib.rs  main.rs
api/src/todo/: models.rs  routes.rs
migrations/2021-08-12-042239_create_todo/: up.sql
src/: error_handler.rs  lib.rs  main.rs  schema.rs
src/controllers/: todo.rs
src/error/: my_error.rs
src/routes/: todo.rs
src/todo/: mod.rs  models.rs  routes.rs
