[package]
name = "todo_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
listenfd = "0.3"
dotenv = "0.15"
env_logger = "0.9"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
lazy_static = "1.4"
# refinery = "0.6"